Fix avatar being clipped on accounts with badges

--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -548,7 +548,6 @@
     padding: 7px 10px;
     margin-top: -81px;
     height: 150px;
-    overflow: hidden;
     margin-inline-start: -2px; // aligns the pfp with content below
 
     .account-role {
